src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body{
  background-color: #FAFEFA;
}

.scrollInfoIcon{
  position: absolute;
  bottom: 50px;
  left: 50%;
  transform: translateX(-50%);
  border: solid 1px white;
  width: 40px;
  height: 60px;
  border-radius: 40px;
}

.scrollInfoIcon::after{
  content: '';
  position: absolute;
  top: 15px;
  left: 50%;
  transform: translateX(-50%);
  width: 2px;
  height: 10px;
  background-color: white;
  animation: scrollInfoIcon 2s ease-in infinite;
}

@keyframes scrollInfoIcon{
  0%{
    top: 15px;
  }
  50%{
    top: 20px;
  }
  100%{
    top: 15px;
  }
}

.theme1 .navItem::before{
  background-color: #29D196;
}

.theme2 .navItem::before{
  background-color: #B438FE;
}

.theme3 .navItem::before{
  background-color: #1BB4EE;
}

.theme1 .linkItem::after{
  background-color: #29D196;
  opacity: .2;
}

.theme2 .linkItem::after{
  background-color: #B438FE;
  opacity: .1;
}

.theme3 .linkItem::after{
  background-color: #1BB4EE;
  opacity: .2;
}

